(Fix) Fixed gap below footer by adjusting DOM height calc

--- a/prototype/dashboard/src/assets/scss/_default.scss
+++ b/prototype/dashboard/src/assets/scss/_default.scss
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-    min-height: calc(100vh - 199px);
+    min-height: calc(100vh - 202px);
 }
 
 .divider {
